turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: type mismatch;
 found   : Int(2)
 required: Array[Int]
			rule(etat)=Array[Array[Int]] (2)
                                                      ^